--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css">
 
-  <title>Exam submision</title>
+  <title>Micheal Smith</title>
 </head>
 
 <body>
@@ -89,7 +89,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
