--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/meadi.css">
+  <link rel="stylesheet" href="css/media.css">
   <link rel="stylesheet" href="icofont/icofont.min.css">
 
   <!-- front -->
