--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6">
           <div class="myservices ">
             <i class="fas fa-code s_s_icon"></i>
-            <h4 class="s_sh4">Graphic Design</h4>
+            <h4 class="s_sh4">Web Design</h4>
             <p class="s_sp">Lorem ipsum dolor sit amet consectetur, adipisicing elit Quis perferendis.</p>
           </div>
         </div>
@@ -180,7 +180,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6">
           <div class="myservices ">
             <i class="fas fa-bullhorn s_s_icon"></i>
-            <h4 class="s_sh4">Graphic Design</h4>
+            <h4 class="s_sh4">Digital Marketing</h4>
             <p class="s_sp">Lorem ipsum dolor sit amet consectetur, adipisicing elit Quis perferendis.</p>
           </div>
         </div>
@@ -188,7 +188,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6">
           <div class="myservices ">
             <i class="fab fa-accessible-icon s_s_icon"></i>
-            <h4 class="s_sh4">Graphic Design</h4>
+            <h4 class="s_sh4">Web Devlopment</h4>
             <p class="s_sp">Lorem ipsum dolor sit amet consectetur, adipisicing elit Quis perferendis.</p>
           </div>
         </div>
@@ -196,7 +196,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6">
           <div class="myservices ">
             <i class="fas fa-bullhorn s_s_icon"></i>
-            <h4 class="s_sh4">Graphic Design</h4>
+            <h4 class="s_sh4">Marketing Strategy</h4>
             <p class="s_sp">Lorem ipsum dolor sit amet consectetur, adipisicing elit Quis perferendis.</p>
           </div>
         </div>
@@ -204,7 +204,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6">
           <div class="myservices ">
             <i class="fab fa-app-store-ios s_s_icon"></i>
-            <h4 class="s_sh4">Graphic Design</h4>
+            <h4 class="s_sh4">Brand Design</h4>
             <p class="s_sp">Lorem ipsum dolor sit amet consectetur, adipisicing elit Quis perferendis.</p>
           </div>
         </div>
