--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="container">
       <!-- 1st row -->
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
           <div class="best_service">
             <h2 class="bs_h2">My Best Services</h2>
             <p class="bs_p">Lorem ipsum dolor sit amet consectetur, adipisicing Quis perferendis autem laboriosam
@@ -263,7 +263,7 @@
     <div class="container">
       <!-- 1st row -->
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-8">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
           <div class="choose">
             <h2 class="co_h2">Why Choose Me</h2>
             <p class="co_p">Lorem ipsum dolor sit amet consectetur, adipisicing Quis perferendis autem laboriosam
@@ -310,7 +310,7 @@
     <div class="container">
       <!-- 1st row -->
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-8 col-8">
+        <div class="col-lg-6 col-md-6 col-sm-8 col-12">
           <div class="project">
             <h2 class="pr_h2">Recent Project Protfolio</h2>
             <p class="pr_p">Lorem ipsum dolor sit amet consectetur, adipisicing Quis perferendis autem laboriosam
@@ -411,7 +411,7 @@
   <section class="hire_me">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="next_project">
             <h1 class="nex_h1">HIRE ME FOR YOUR NEXT PROJECT</h1>
             <P class="nex_p">AVAILBLE FOR YOUR NEXT PROJECT</P>
@@ -423,6 +423,8 @@
   </section>
 
   <!-- hire me sectione start -->
+  <!-- team section start -->
+  <section class="team_section">
   <div class="container">
     <div class="row">
         <div class="col-md-4 col-sm-6">
@@ -478,13 +480,14 @@
       </div>
     </div>
 </div>
-
+</section>
+  <!-- team section end -->
   <!-- message section start -->
    <section class="message">
      <div class="container">
        <!-- 1st row -->
        <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-8 col-8">
+        <div class="col-lg-6 col-md-6 col-sm-8 col-12">
           <div class="send_me">
             <h2 class="send_h2">Send Me a Message</h2>
             <p class="send_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos quasi voluptatem dignissimos labore non itaque omnis officia cumque sit veritatis,</p>
@@ -494,7 +497,7 @@
       <!-- 2nd row -->
       <div class="row">
         <!-- information -->
-        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-12">
           <div class="information">
             <i class="icofont-ui-call infor_icon"></i>
             <h4 class="p_phone">Phone Number</h4>
@@ -507,7 +510,7 @@
         </div>
 
           <!-- information -->
-          <div class="col-lg-4  col-md-4 col-sm-4 col-4">
+          <div class="col-lg-4  col-md-4 col-sm-4 col-12">
             <div class="information">
               <i class="icofont-email infor_icon"></i>
               <h4 class="p_phone">Personal Email</h4>
@@ -519,7 +522,7 @@
             </div>
           </div>
           <!-- information -->
-          <div class="col-lg-4  col-md-4 col-sm-4 col-4" >
+          <div class="col-lg-4  col-md-4 col-sm-4 col-12" >
             <div class="information">
               <i class="icofont-street-view infor_icon"></i>
               <h4 class="p_phone">Street Address</h4>
