--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="number">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a class="n_phone" href="mailto:micile@gamil.com "><i class="icofont-email n_icon"></i>micile@gamil.com
+                <a class="n_phone" href="mailto:micile@gmail.com "><i class="icofont-email n_icon"></i>micile@gmail.com
                 </a>
 
 
